# src/app/core/services/model/loginUserRequest.ts
@@ -1,0 +1,16 @@
+/**
+ * Swagger Universitary - OpenAPI 3.0
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface LoginUserRequest { 
+    username?: string;
+    password?: string;
+}
+
